--- a/UserManagementApplication.Web/UserManagementApplication.Web.csproj
+++ b/UserManagementApplication.Web/UserManagementApplication.Web.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\UserManagementApplication.Web.Dtos\UserManagementApplication.Web.Dtos.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Project-Pictures\" />
+  </ItemGroup>
+
 </Project>
